--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,11 +1,3 @@
-# This workflow will upload a Python Package using Twine when a release is created
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Upload Python Package
 
 on:
@@ -18,21 +10,38 @@ permissions:
 
 jobs:
   deploy:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
         python-version: '3.x'
+
     - name: Install dependencies
       run: |
+        sudo apt-get update && sudo apt-get -y install wget
         python -m pip install --upgrade pip
-        pip install build
+        pip install build pydoctor
+        wget https://raw.githubusercontent.com/luxonis/python-api-analyzer-to-json/main/gen-docs.py -O gen-docs.py
+
     - name: Build package
       run: python -m build
+
+    - name: Generate docs
+      run: python gen-docs.py ./src/robothub_depthai
+
+    - uses: shallwefootball/s3-upload-action@master
+        with:
+          aws_key_id: ${{ secrets.R2_ACCESS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.R2_SECRET_ACCESS_KEY}}
+          aws_bucket: docs-assets
+          endpoint: https://780448894f6a1605bf84886104d96c1f.r2.cloudflarestorage.com/
+          source_dir: docs.json
+          destination_dir: libraries/python/robothub_oak/${{ env.GITHUB_REF_NAME }}/schema.json
+
+
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
