use different variable

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -32,8 +32,8 @@ jobs:
     - name: Generate docs
       run: |
         python gen-docs.py ./src/robothub_depthai
-        mkdir -p s3-upload/${{ env.GITHUB_REF_NAME }}
-        mv docs.json s3-upload/${{ env.GITHUB_REF_NAME }}/schema.json
+        mkdir -p s3-upload/${{ github.ref_name }}
+        mv docs.json s3-upload/${{ github.ref_name }}/schema.json
 
     - uses: shallwefootball/s3-upload-action@master
       with:
@@ -41,8 +41,8 @@ jobs:
         aws_secret_access_key: ${{ secrets.R2_SECRET_ACCESS_KEY}}
         aws_bucket: docs-assets
         endpoint: https://780448894f6a1605bf84886104d96c1f.r2.cloudflarestorage.com/
-        source_dir: s3-upload/${{ env.GITHUB_REF_NAME }}
-        destination_dir: libraries/python/robothub_oak/${{ env.GITHUB_REF_NAME }}/schema.json
+        source_dir: s3-upload/${{ github.ref_name }}
+        destination_dir: libraries/python/robothub_oak/${{ github.ref_name }}
 
 
     - name: Publish package
