--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -32,8 +32,8 @@ jobs:
         echo "[cfr2]" > ~/.config/rclone/rclone.conf
         echo "type = s3" >> ~/.config/rclone/rclone.conf
         echo "provider = Cloudflare" >> ~/.config/rclone/rclone.conf
-        echo "access_key_id = ${R2_ACCESS_KEY_ID}" >> ~/.config/rclone/rclone.conf
-        echo "secret_access_key = ${R2_SECRET_ACCESS_KEY}" >> ~/.config/rclone/rclone.conf
+        echo "access_key_id = ${{ secrets.R2_ACCESS_KEY_ID }}" >> ~/.config/rclone/rclone.conf
+        echo "secret_access_key = ${{ secrets.R2_SECRET_ACCESS_KEY }}" >> ~/.config/rclone/rclone.conf
         echo "endpoint = https://780448894f6a1605bf84886104d96c1f.r2.cloudflarestorage.com" >> ~/.config/rclone/rclone.conf
         echo "acl = private" >> ~/.config/rclone/rclone.conf
 
